--- a/index.html
+++ b/index.html
@@ -17,9 +17,10 @@
                 <button id="search-btn">Search</button>
             </div>
         </nav>
-        <div class="img">
-            
+        <div class="card">
+            <!-- Movies will be displayed here -->
         </div>
     </div>
+    <script src="app.js"></script>
 </body>
 </html>
